--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,5 @@
-pyrofork
-Tgcrypto
-asyncio
-aiohttp
-pymongo[srv]==3.12.3
-motor==2.5.1
-marshmallow==3.14.1
-umongo==3.0.1
-validators
-requests
-bs4
-pytz
+Pyrogram==2.0.106
+TgCrypto
 shortzy
-python-dotenv==0.21.1
-Flask==1.1.2
-gunicorn==20.1.0
-Jinja2==3.0.3
-werkzeug==2.0.2
-itsdangerous==2.0.1
+aiohttp
+motor
